﻿Pulse Changelog

Pulse-4.4.17
 - In EnsembleIntervalViewModel, fixed the CEI command only being an integer.
 - Added PredictionModel image to Home page.
 - In DownloadedDataViewModel, add ability to download any data that starts with .EN
 

Pulse-4.4.13
 - In ExportDataViewModel, added Velocity Vector export to csv.
 - Fixed background colors in textboxes.
 - Fixed download data button for ethernet.
 - Fixed selecting subsystems in DVL Setup.
 - Maded the default BT mode in Project prediction model Narrowband.

Pulse-4.4.12
 - In BackscatterViewModel, removed 3 plots and left only 1.
 - In ViewDataGraphicalViewModel, removed contour plot and replaced with heatmap plot.

Pulse-4.4.11
 - Updated Distanced Traveled calculation.

Pulse-4.4.10 
 - Check if the data is valid before converting it in ExportDataViewModel.

Pulse-4.4.9
 - Updated the prediction model.

Pulse-4.4.8
 - In TimeViewModel, fixed crash when selecting date.

Pulse-4.4.7
 - In ExportDataViewModel, when exporting data, use the VM and Screening options on the data.
 - In ViewDataDvlViewModel, added GPS Heading.
 - In ViewDataTextEnsembleViewModel, added GPS Heading.

Pulse-4.4.6
 - Fix playback.
 - Fix missing heading.

Pulse-4.4.5
 - Fixed the font colors in Windows 10.
 - Updated the prediction model to Rev M.

Pulse-4.4.4
 - Fixed Export of RangeTracking data. And added to RangeTracking to project.
 
Pulse-4.4.0
 - In NavBar added record button and recording to file to the record button.
 - In CompassRoseViewModel, added try catch for averaging. Put a thread in to buffer the data.
 - Added DVL data to TimeSeries.  This includes Ship Velocity.

Pulse-4.3.1
 - In ExportDataViewModel, fixed setting the min and max ensemble index.
 - Added Pulse.Version to keep track of the version number.
 - In AboutVeiwModel, added version number for Pulse Display.
 - In ViewDataTextEnsembleViewModel, added timer to limit the update speed.
 - In ViewDataTextViewModel, added RangeTracking info.