@@ -51,5 +51,5 @@ using System.Windows;
 // You can specify all the ranges or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("4.4.17.*")]
-[assembly: AssemblyFileVersion("4.4.17.0")]
+[assembly: AssemblyVersion("4.5.0.*")]
+[assembly: AssemblyFileVersion("4.5.0.0")]
