@@ -61,7 +61,8 @@
 
                 <!--Buttons-->
                 <StackPanel Grid.Row="1" Grid.Column="0">
-                    <Button Content="Import" Command="{Binding Path=ImportDataCommand}" Margin="5" HorizontalAlignment="Center" FontSize="26.667" Foreground="{StaticResource ClockFontColor}" Background="{StaticResource ClockBackgroundColor}" BorderBrush="{StaticResource ButtonGlowGradiant}" />
+                    <Button Content="Import RoweTech Binary" Command="{Binding Path=ImportRtbDataCommand}" Margin="5" HorizontalAlignment="Center" ToolTip="Optimzed to import RoweTech Binary files." FontSize="26.667" Foreground="{StaticResource ClockFontColor}" Background="{StaticResource ClockBackgroundColor}" BorderBrush="{StaticResource ButtonGlowGradiant}" />
+                    <Button Content="Import Any  Data" Command="{Binding Path=ImportDataCommand}" Margin="5" HorizontalAlignment="Center" ToolTip="Import any file types or database files." FontSize="26.667" Foreground="{StaticResource ClockFontColor}" Background="{StaticResource ClockBackgroundColor}" BorderBrush="{StaticResource ButtonGlowGradiant}" />
                 </StackPanel>
 
                 <!--Dockpanel is used to span the entire screen length-->
